[tool.poetry]
name = "finazon-grpc-python-client"
packages = [{include = "finazon-grpc-python-client"}]
include = ["requirements.txt", "finazon-grpc-python-client/*.py"]
version = "1.0.4"
description = "Finazon gRPC client library for Python"
authors = ["Finazon <team@finazon.io>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mivxxx/finazon-grpc-python-client"
repository = "https://github.com/mivxxx/finazon-grpc-python-client"

[tool.poetry.dependencies]
python = "^3.10"
grpcio-tools = "1.58.0"
grpcio = "1.58.0"
mypy-protobuf = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
